[tool.poetry]
name = "yolo-v1-keras"
version = "0.1.0"
description = ""
authors = ["minhluan1590 <minhluan1590@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
opencv-contrib-python = "^4.7.0.72"
tensorflow = "^2.12.0"
pandas = "^2.0.2"
seaborn = "^0.12.2"
jupyter = "^1.0.0"
scikit-learn = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
